fix z-index in pop-up

--- a/app/sass/popUp/_popUp.scss
+++ b/app/sass/popUp/_popUp.scss
@@ -1,4 +1,5 @@
 .pop-up-wrapper {
+    z-index: 6;
     width: 100vw;
     position: absolute;
     height: 100%;
